processed/jira/txt/LU/LU-5853.txt
Key:        LU-5853
Summary:    el7 build broken
Link:       https://jira.whamcloud.com/browse/LU-5853
Type:       Bug
Priority:   Critical
Status:     Resolved
Resolution: Fixed
Assignee:   Bob Glossman
Reporter:   Bob Glossman
Created:    Mon, 3 Nov 2014 22:16:20 +0000
Updated:    Tue, 4 Nov 2014 18:16:35 +0000
Resolved:   Tue, 4 Nov 2014 18:16:35 +0000
Links:      Related: is related to LU-5022

--- Description ---
It looks like a recent landing to master has broken server builds for el7.  The only reason this isn't a Blocker is because it's only seen during sever builds, not in client only builds.  At the moment we don't routinely do server builds for el7.  As soon as we do this problem will be a blocker.

I strongly suspect the problem is due to the recently landed http://review.whamcloud.com/#/c/9299; LU-4647 nodemap: add mapping functionality; since the build errors appear in code that's new with this commit. example errors:

  CC [M]  /home/bogl/lustre-release/lustre/ptlrpc/../../lustre/target/out_lib.o
  CC [M]  /home/bogl/lustre-release/lustre/ptlrpc/nodemap_handler.o
  CC [M]  /home/bogl/lustre-release/lustre/ptlrpc/nodemap_lproc.o
/home/bogl/lustre-release/lustre/ptlrpc/nodemap_lproc.c: In function ‘nodemap_exports_open’:
/home/bogl/lustre-release/lustre/ptlrpc/nodemap_lproc.c:205:34: error: dereferencing pointer to incomplete type
  struct lu_nodemap *nodemap = dir->data;
                                  ^
make[6]: *** [/home/bogl/lustre-release/lustre/ptlrpc/nodemap_lproc.o] Error 1
make[5]: *** [/home/bogl/lustre-release/lustre/ptlrpc] Error 2
make[4]: *** [/home/bogl/lustre-release/lustre] Error 2
make[3]: *** [_module_/home/bogl/lustre-release] Error 2
make[3]: Leaving directory `/home/bogl/rb/BUILD/kernel-3.10.0.123.9.2.l1029'
make[2]: *** [modules] Error 2
make[2]: Leaving directory `/home/bogl/lustre-release'
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory `/home/bogl/lustre-release'
make: *** [all] Error 2

I suspect only seen in rhel7 so far as I think it's related to HAVE_ONLY_PROCFS_SEQ #defined by autoconf.  If that is true it will also break build on sles12 server too.

--- Comment (jlevi, Tue, 4 Nov 2014 18:16:35 +0000) ---
Patch landed to Master.

--- Comment (simmonsja, Mon, 3 Nov 2014 22:54:34 +0000) ---
Okay. I'm currently running some test with rhel6.5 but will switch 3.12 testing tomorrow. The fix looks correct.

--- Comment (bogl, Mon, 3 Nov 2014 22:46:12 +0000) ---
proposed fix:

http://review.whamcloud.com/12546

--- Comment (bogl, Mon, 3 Nov 2014 22:30:19 +0000) ---
I think there may be a simpler fix possible in the meantime, just replacing use of PDE() with PDE_DATA().  It seems to work in el7 builds, don't know yet if it works everywhere.  If it proves out it will be a cheap 1 line fix for this build regression & won't have to wait on http://review.whamcloud.com/#/c/12298.

--- Comment (simmonsja, Mon, 3 Nov 2014 22:25:42 +0000) ---
Just recently http://review.whamcloud.com/#/c/12298 had a merge conflict and it hasn't finished testing. I can look into fixing this with that patch.
